--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,19 +10,12 @@
 </head>
 
 <body>
-
-    
-
+    <h1>ALLo LA terre </h1>
 
 
- <script type="module" src="/js/main.js"></script>
+
+
+    <script type="module" src="/js/main.js"></script>
 </body>
+
 </html>
-
-
-
-
-
-
-
-
